force-app/main/default/objects/Participant__c/fields/Participant_ID__c.field-meta.xml
<CustomField>
    <fullName>Participant_ID__c</fullName>
    <label>Participant ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>