force-app/main/default/objects/Participant__c/fields/Participant_Number__c.field-meta.xml
<CustomField>
    <fullName>Participant_Number__c</fullName>
    <label>Participant Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>