force-app/main/default/objects/Participant__c/fields/Spell_1__c.field-meta.xml
<CustomField>
    <fullName>Spell_1__c</fullName>
    <label>Spell 1</label>
    <length>3</length>
    <type>Text</type>
</CustomField>