force-app/main/default/objects/Participant__c/fields/Spell_2__c.field-meta.xml
<CustomField>
    <fullName>Spell_2__c</fullName>
    <label>Spell 2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>